--- a/vignettes/Example_Vignette_ONT_duplex.rmd
+++ b/vignettes/Example_Vignette_ONT_duplex.rmd
@@ -26,24 +26,26 @@ knitr::opts_chunk$set(
 
 ## Import Functions
 ```{r source}
-source("00-paths.R")
-source(file.path(paths$bin, "fG-helper_functions.R"))
+#source("00-paths.R")
+source(file.path("R", "fG-helper_functions.R"))
 library(Biostrings)
 
 # Create directories
-for (dir in paths) dir.create(file.path(dir), 
-                              showWarnings = FALSE)
+#for (dir in paths) dir.create(file.path(dir), 
+#                              showWarnings = FALSE)
 
 # Sample name
-sample_name <- "HG002_ONT_duplex"
+sample_name <- "HG004"
 
 # Create results directory
-dir.create(file.path(paths$example_results, sample_name), 
-           showWarnings = FALSE)
+#dir.create(file.path(paths$example_results, sample_name), 
+#           showWarnings = FALSE)
 
-sample_file <- file.path("/home/jake/science_projects/telo/shared_data/hs/data/ONT_duplex/SRR282957_comb.fastq")
-data_dir <- file.path(paths$example_data, "data", 
-                      "ONT_duplex")
+sample_file <- file.path("/home/jake/tmp/comparative_study_temp/HG004/input/lr/HG004_lr.fastq")
+data_dir <- file.path("/home/jake/tmp/comparative_study_temp/tmp")
+results_dir <- file.path("/home/jake/tmp/comparative_study_temp/tmp/results")
+dir.create(data_dir, showWarnings = FALSE)
+dir.create(results_dir, showWarnings = FALSE)
 
 # Set width
 options(width = 300)
@@ -75,7 +77,7 @@ echo $data_dir
 ``` -->
 
 ```{r Split_Fastq, eval = FALSE}
-source(file.path(paths$bin, "f01-Fastq_Processing.R"))
+source(file.path("R", "f01-Fastq_Processing.R"))
 
 # Split large fastq file into files that will occupy
 # 2GB of RAM in order to take advantage of all processors
@@ -83,9 +85,10 @@ source(file.path(paths$bin, "f01-Fastq_Processing.R"))
 if(!file.exists(list.files(file.path(dirname(sample_file), "split"), 
                            full.names = TRUE)[1])) {
    stats_fl <- auto_split(in_fastq = sample_file,
-                          prefix = "HG002_ONT_dup_", 
+                          prefix = "HG004", 
                           threads = 18, 
-                          extension = ".gz", 
+                          extension = ".gz",
+                          out_dir = file.path(data_dir, "split"), 
                           target_ram_size_gb = 2)
                           
   # Save stats
@@ -99,10 +102,10 @@ if(!file.exists(list.files(file.path(dirname(sample_file), "split"),
 ```{r process_reference, eval = TRUE}
 ## Switching denovo motif analysis to streme from meme suite, need 
 ## to add to dependencies
-source(file.path(paths$bin, "f02-Reference_Processing.R"))
+source(file.path("R", "f02-Reference_Processing.R"))
 options(meme_bin = "~/meme/bin")
-reference_file <- file.path(paths$example_data, "ref", "hg002v1.0.1.fasta.gz")
-reference <- readDNAStringSet(reference_file, format = "fasta")
+reference_file <- file.path("/home/jake/tmp/comparative_study_temp/HG004/input/ref/hg002v1.0.1.fasta")
+#reference <- readDNAStringSet(reference_file, format = "fasta")
 
 # Process reference file 
 # # PB Settings
@@ -115,11 +118,11 @@ reference <- readDNAStringSet(reference_file, format = "fasta")
 #                                  threads = 18)
 
 # ONT Settings
-motif_analysis <- telomere_motif(data_ref = reference,
+motif_analysis <- telomere_motif(reference_file = reference_file,
                                  reference_telo_length = 2000,
                                  telo_motif_length = 6, 
                                  number_of_motifs = 10,
-                                 number_of_repeats = 15, 
+                                 number_of_repeats = 10, 
                                  platform = "ONT",
                                  threads = 18)
 
@@ -129,8 +132,7 @@ print(paste("Grep pattern for pattern matching and initial search: ",
             motif_analysis$grep_list))
 
 # Save results
-saveRDS(motif_analysis, file.path(paths$example_results,
-        sample_name, "motif_analysis_results.rds"))
+saveRDS(motif_analysis, file.path(results_dir, "motif_analysis_results.rds"))
 
 # Clean up
 rm(list = c("reference_file", "reference"))
@@ -139,12 +141,11 @@ gc()
 
 ## Isolate telomere reads
 ```{r telo_search, eval = TRUE}
-motif_analysis <- readRDS(file.path(paths$example_results,
-                                    sample_name,
+motif_analysis <- readRDS(file.path(results_dir,
                                     "motif_analysis_results.rds"))
                                     
 # Source functions for pattern searching
-source(file.path(paths$bin, "f03-Pattern_searching.R"))
+source(file.path("R", "f03-Pattern_searching.R"))
 
 # Run pattern searh on all split fastq files
 file_list <- list.files(file.path(data_dir, "split"), 
@@ -171,15 +172,13 @@ rm(list = c("file_list", "out"))
 gc()
 
 # Save telomere_stats
-saveRDS(search_res, file.path(paths$example_results,
-                                  sample_name,
+saveRDS(search_res, file.path(results_dir,
                                   "telomere_stats.rds"))
 ```
 
 ## Cut telomere reads into sliding windows
 ```{r telo_cut, eval = TRUE}
-telomere_stats <- readRDS(file.path(paths$example_results,
-                                    sample_name,
+telomere_stats <- readRDS(file.path(results_dir, 
                                     "telomere_stats.rds"))
 
 telo_file <- list.files(file.path(data_dir, "telo"),
@@ -187,7 +186,7 @@ telo_file <- list.files(file.path(data_dir, "telo"),
                         full.names = TRUE)
 
 # Source functions for cutting telomere reads into sliding windows
-source(file.path(paths$bin, "f04-Sliding_window.R"))
+source(file.path("R", "f04-Sliding_window.R"))
 
 # Run sliding window on all telomere files
 windows <- sliding_window_parallel(telomere_file = telo_file, 
@@ -208,7 +207,7 @@ cat("\nFinished processing all telomere files to sliding windows.", "\n")
 ## Calculate frequency of telomere motifs in sliding windows
 ```{r telo_freq, eval = TRUE}
 # Source functions for calculating telomere motif frequencies
-source(file.path(paths$bin, "f05-Generate_telomere_frequencies.R"))
+source(file.path("R", "f05-Generate_telomere_frequencies.R"))
 
 # Load in data 
 motif_analysis <- readRDS(file.path(paths$example_results, 
@@ -271,7 +270,7 @@ telomere_frequencies <- readRDS(file.path(paths$example_results,
                                           "freqs.rds"))
 
 # Source functions for determining telomere length
-source(file.path(paths$bin, "f06-Telomere_length.R"))
+source(file.path("R", "f06-Telomere_length.R"))
 
 # Threshold determination
 thresh_df <- determine_threshold(telomere_list = telomere_frequencies,
@@ -439,7 +438,7 @@ print(paste0("\nBest end threshold: ", best_end, "\n"))
 For now run all telomeres with start threshold of
 25 and end threshold of 25.
 ```{r check_lengths, eval = TRUE}
-source(file.path(paths$bin, "f06-Telomere_length.R"))
+source(file.path("R", "f06-Telomere_length.R"))
 
 # Load data
 telomere_frequencies <- readRDS(file.path(paths$example_results,
@@ -498,8 +497,8 @@ print(paste0("Total time: ", end_time - start_time))
 # Truncation and Mapping
 ## Truncate reads
 ```{r truncate, eval = FALSE}
-source(file.path(paths$bin, "fG-helper_functions.R"))
-source(file.path(paths$bin, "f07-Truncate_Map.R"))
+source(file.path("R", "fG-helper_functions.R"))
+source(file.path("R", "f07-Truncate_Map.R"))
 # Load data
 results_df <- readRDS(file.path(paths$example_results,
                                 sample_name, 
